# advent-of-code

./: .gitignore
2015/day07/csharp/: Program.cs  csharp.sln
2015/day08/csharp/: Program.cs  csharp.sln
2015/day09/csharp/: Program.cs  csharp.sln
2015/day10/csharp/: Program.cs  csharp.sln
2015/day11/csharp/: Program.cs  csharp.sln
2015/day12/csharp/: Program.cs  csharp.sln
2015/day13/csharp/: Program.cs  csharp.sln
2015/day14/csharp/: Program.cs  csharp.sln
2015/day16/csharp/: Program.cs  csharp.sln
2015/day17/csharp/: Program.cs  csharp.sln
2015/day18/csharp/: Program.cs  csharp.sln
2015/day19/csharp/: Program.cs  csharp.sln
2016/day01/csharp/: Program.cs  csharp.sln
2016/day02/csharp/: Program.cs  csharp.sln
2016/day03/csharp/: Program.cs  csharp.sln
2016/day04/csharp/: Program.cs  csharp.sln
2016/day05/rust/: Cargo.toml
2016/day06/csharp/: Program.cs  csharp.sln
2016/day07/csharp/: Program.cs  csharp.generated.sln
2016/day08/csharp/: Program.cs  csharp.generated.sln
2017/day01/csharp/: Program.cs  csharp.sln
2017/day02/csharp/: Program.cs  csharp.sln
2018/day01/python/: main.py
2018/day02/python/: main.py
2018/day03/csharp/: Program.cs  csharp.sln
2018/day04/csharp/: Program.cs  csharp.sln
2018/day05/csharp/: Program.cs  csharp.sln
2019/day01/python/: main.py
2019/day02/python/: main.py
2019/day03/csharp/: Program.cs  csharp.sln
2019/day05/csharp/: Program.cs  csharp.sln
2020/day01/python/: main.py
runtime/: Cargo.toml  aoc  main.sh
runtime/src/: api.rs  main.rs  proj.rs  puzzle.rs
(+112 files in other folders)
