[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.4"
regex = "1.10.4"
dirs = "5.0.1"
colored = "2.1.0"
